--- a/app/views/advert/kategoriler.html.erb
+++ b/app/views/advert/kategoriler.html.erb
@@ -254,7 +254,7 @@
 								</div><!-- /cbp-hrsub -->
 							</li>
 
-							<a href="/kategoriler/evarkadasi">Ev Arkadaşı</a>
+							<li><a href="/kategoriler/evarkadasi">Ev Arkadaşı</a> </li>
 
 							<li>
 								<a href="#">Özel Ders</a>
@@ -541,7 +541,7 @@
 
 										<div class='descriptionSabit2'>
 											<!-- description content -->
-											<div class='description_content'>
+											<div class='description_content2'>
 												<%= advert.price %> &#x20BA;
 											</div>
 											<!-- end description content -->
