--- a/app/views/application/_evarkadasiform.html.erb
+++ b/app/views/application/_evarkadasiform.html.erb
@@ -35,7 +35,7 @@
 	<label class = "col-sm-2 control-label">Aylık Kira</label>
 
 	<div class = "col-sm-10">
-		<%= t.text_field :price, class:"form-control", :onkeyup => 'evarkadasifiyatVerify()' %>
+		<%= t.text_field :price, class:"form-control",:placeholder => 'TL', :onkeyup => 'evarkadasifiyatVerify()' %>
 	</div>
 </div>
 
