--- a/app/views/application/_ilanbenzer.html.erb
+++ b/app/views/application/_ilanbenzer.html.erb
@@ -60,7 +60,7 @@
 			<% end %>
 			<div class="price">
 				<h5 class="item_price"><%= advert.price %>&#8378;</h5>
-				<a href="#" class="item_add">İncele</a>
+				<a href="<%= advert.href %>" class="item_add">İncele</a>
 				<div class="clearfix"></div>
 			</div>
 		</div>
