--- a/app/views/index/aramasonuclari.html.erb
+++ b/app/views/index/aramasonuclari.html.erb
@@ -382,9 +382,9 @@
 
 		<div class=" panel-body">
 			
-		 <%= text_field_tag :taban,params[:taban]  %> &nbsp;ile <br><br>
+		 <%= text_field_tag :taban,params[:taban],:placeholder => 'TL'  %> &nbsp;ile <br><br>
 		
-		<%= text_field_tag :tavan,params[:tavan] %> &nbsp; arası
+		<%= text_field_tag :tavan,params[:tavan],:placeholder => 'TL' %> &nbsp; arası
 		</div>
 
 		
@@ -488,9 +488,9 @@
 
 		<div class=" panel-body">
 			
-		 <%= text_field_tag :taban,params[:taban]  %> &nbsp;ile <br><br>
+		 <%= text_field_tag :taban,params[:taban],:placeholder => 'TL'  %> &nbsp;ile <br><br>
 		
-		<%= text_field_tag :tavan,params[:tavan] %> &nbsp; arası
+		<%= text_field_tag :tavan,params[:tavan],:placeholder => 'TL' %> &nbsp; arası
 		</div>
 
 		
@@ -634,9 +634,9 @@
 
 		<div class=" panel-body">
 			
-		 <%= text_field_tag :taban,params[:taban]  %> &nbsp;ile <br><br>
+		 <%= text_field_tag :taban,params[:taban],:placeholder => 'TL'  %> &nbsp;ile <br><br>
 		
-		<%= text_field_tag :tavan,params[:tavan] %> &nbsp; arası
+		<%= text_field_tag :tavan,params[:tavan],:placeholder => 'TL' %> &nbsp; arası
 		</div>
 
 		
