--- a/app/views/application/_ikincielform.html.erb
+++ b/app/views/application/_ikincielform.html.erb
@@ -43,7 +43,7 @@
 	<label class = "col-sm-2 control-label">Fiyat</label>
 
 	<div class = "col-sm-10">
-		<%= t.text_field :price, class:"form-control", :maxlength => 7, :onkeyup => 'ikincielfiyatVerify()' %>
+		<%= t.text_field :price, class:"form-control",:placeholder => 'TL', :maxlength => 7, :onkeyup => 'ikincielfiyatVerify()' %>
 	</div>
 </div>
 
