--- a/app/views/application/_ozeldersform.html.erb
+++ b/app/views/application/_ozeldersform.html.erb
@@ -35,7 +35,7 @@
 	<label class = "col-sm-2 control-label">Saatlik Ücret</label>
 
 	<div class = "col-sm-10">
-		<%= t.text_field :price, class:"form-control", :onkeyup => 'ozeldersfiyatVerify();' %>
+		<%= t.text_field :price, class:"form-control",:placeholder => 'TL', :onkeyup => 'ozeldersfiyatVerify();' %>
 	</div>
 </div>
 
