--- a/app/views/user/member2.html.erb
+++ b/app/views/user/member2.html.erb
@@ -388,7 +388,7 @@
 
 								<div style="margin-top:0px;" class=" uyepaneli col-xs-12 col-sm-12 col-md-12 col-lg-12  toppad">
 
-									<div class="panelortak profilim panel panel-info">
+									<div class="row panelortak profilim panel panel-info">
 										<div class="panel-heading">
 											<h3 class="panel-title"><%= @other_user.name+" "+ @other_user.surname %> </h3>
 										</div>
@@ -519,8 +519,17 @@
 												</div>
 											</div>
 										</div>
-										<div class="panel-footer">
-											<a href="/mesajlarim" data-original-title="Mesaj Gönder"
+										<div class="hidden-xs hidden-sm panel-footer">
+											<a href="/mesajlarim/?username=<%= @other_user.username %>&screen=large" data-original-title="Mesaj Gönder"
+											data-toggle="tooltip" type="button"
+											class="btn btn-sm btn-primary"><i
+											class="glyphicon glyphicon-envelope"></i></a>
+
+										</div>
+										
+										
+										<div class="visible-xs visible-sm panel-footer">
+											<a href="/mesajlarim/?username=<%= @other_user.username %>&screen=small" data-original-title="Mesaj Gönder"
 											data-toggle="tooltip" type="button"
 											class="btn btn-sm btn-primary"><i
 											class="glyphicon glyphicon-envelope"></i></a>
