--- a/app/views/index/universiteler.html.erb
+++ b/app/views/index/universiteler.html.erb
@@ -267,7 +267,7 @@
 								</div><!-- /cbp-hrsub -->
 							</li>
 
-							<a href="/kategoriler/evarkadasi">Ev Arkadaşı</a>
+							<li><a href="/kategoriler/evarkadasi">Ev Arkadaşı</a></li>
 
 							<li>
 								<a href="#">Özel Ders</a>
