--- a/app/views/application/_ikincielform.html.erb
+++ b/app/views/application/_ikincielform.html.erb
@@ -189,7 +189,7 @@
 		<%= t.submit 'İlanı Güncelle',class:"btn btn-default" %>
 	</div>
 	<div class = "col-sm-5">
-		<button type="button" class="btn btn-danger" onclick="ilankapat(<%= @advert.id %>);">İlanı Kapat</button>
+		<button type="button" class="btn btn-danger" data-title="ilankapat" data-toggle="modal" data-target=".ilankapatildi">İlanı Kapat</button>
 	</div>
 </div>
 
