--- a/app/views/index/universiteler.html.erb
+++ b/app/views/index/universiteler.html.erb
@@ -267,7 +267,26 @@
 								</div><!-- /cbp-hrsub -->
 							</li>
 
-							<li><a href="/kategoriler/evarkadasi">Ev Arkadaşı</a></li>
+							<li>
+								<a href="#">Ev Arkadaşı</a>
+								<div class="cbp-hrsub">
+									<div class="cbp-hrsub-inner">
+
+
+										<div>
+											<h4>Ev Arkadaşı</h4>
+											<ul>
+												<li>
+													<a href="/kategoriler/ozelders/genelegitimbilimleri">Ev Arkadaşı İlanları</a>
+												</li>
+
+											</ul>
+
+										</div>
+
+									</div><!-- /cbp-hrsub-inner -->
+								</div><!-- /cbp-hrsub -->
+							</li>
 
 							<li>
 								<a href="#">Özel Ders</a>
