--- a/app/views/application/_footer.html.erb
+++ b/app/views/application/_footer.html.erb
@@ -40,7 +40,7 @@
 					<a href="/duyurular">Duyurular</a>
 				</li>
 				<li>
-					<a href="#">Risksiz Alışveriş Sistemi</a>
+					<a href="/risksizalisveris">Risksiz Alışveriş Sistemi</a>
 				</li>
 				<li>
 					<a href="/iletisim">İletişim</a>
@@ -58,16 +58,16 @@
 			<ul>
 
 				<li>
-					<a href="#">Nasıl İlan Ekleyebilirim?</a>
+					<a href="/yardim?ilanekleme=1">Nasıl İlan Ekleyebilirim?</a>
 				</li>
 				<li>
-					<a href="#">Nasıl Ürün Satın Alırım?</a>
+					<a href="/yardim?hizmetsatinalma=1">Nasıl Ürün Satın Alırım?</a>
 				</li>
 				<li>
 					<a href="kullanimkosullari">Kullanım Koşulları</a>
 				</li>
 				<li>
-					<a href="#">Daha Fazla Yardım</a>
+					<a href="/yardim">Daha Fazla Yardım</a>
 				</li>
 
 			</ul>
