--- a/app/views/index/universiteler.html.erb
+++ b/app/views/index/universiteler.html.erb
@@ -656,7 +656,7 @@
 
 									<li>
 
-										<div class='wrapper'>
+										<div class='wrapper wrapper2'>
 											<!-- image -->
 											<a href="<%= advert.href %>"> <%= image_tag advert.pimage.imagefile(:small) %></a>
 											<!-- description div -->
@@ -667,6 +667,17 @@
 												</div>
 												<!-- end description content -->
 											</div>
+											
+											
+											<div class='descriptionSabit2'>
+													<!-- description content -->
+													<div class='description_content2'>
+														<%= advert.price %> &#x20BA;
+													</div>
+													<!-- end description content -->
+												</div>
+											
+											
 											<!-- end description div -->
 										</div>
 
