--- a/app/views/user/login.html.erb
+++ b/app/views/user/login.html.erb
@@ -138,17 +138,17 @@
 
 			</div>
 
-			<div  class="well">
+			<div  class="row well">
 
 				<%if params[:hataligiris]%>
 				<div class="row">
 
-					<div style="margin-left:20px;"class="col-lg-4 col-md-5 hidden-sm hidden-xs alert alert-danger">
+					<div style="margin-left:20px;" class="col-lg-4 col-md-4 hidden-sm hidden-xs alert alert-danger">
 						<a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
 						<strong>Hata!</strong> Kullanıcı adınızı veya şifrenizi yanlış girdiniz
 					</div>
 
-					<div style=""class="hidden-lg hidden-md col-sm-12 col-xs-12 alert alert-danger">
+					<div style="margin-left:20px;"  class="hidden-lg hidden-md col-sm-6	 col-xs-10 alert alert-danger">
 						<a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
 						<strong>Hata!</strong> Kullanıcı adınızı veya şifrenizi yanlış girdiniz
 					</div>
@@ -190,14 +190,14 @@
 
 				<div class="row">
 
-					<div class="mainbox col-lg-4 col-md-4" id="loginbox" style="margin-top: 20px;">
+					<div class="mainbox col-lg-5 col-md-5" id="loginbox" style="margin-top: 20px;">
 						<div class="panel panel-info">
 							<div class="panel panel-heading">
 								<div class="panel-title">
 									Giriş Yap
 								</div>
 								<div style="float: right; font-size: 80%; position: relative; top: -10px">
-									<a href="#">Şifrenizi mi unuttunuz?</a>
+									<a href="/sifremiunuttum">Şifrenizi mi unuttunuz?</a>
 								</div>
 							</div>
 
@@ -240,14 +240,14 @@
 										<br class="visible-xs">
 										<br class="visible-xs">
 
-										<a style="width:100%;" id="btn-fblogin" href="#" class="visible-xs btn btn-primary">Facebook İle Bağlan</a>
-										<br class="visible-xs">
-										<a  id="btn-fblogin" href="#" class="hidden-xs btn btn-primary">Facebook İle Bağlan
+
 										<br class="visible-xs">
 										<br class="visible-xs">
 										<a style="width:100%;" id="register" href="/kayitol"
-										class="visible-xs btn btn-primary">Kayıt Ol</a> <a id="register" href="/kayitol"
-										style="float: right;" class="hidden-xs btn btn-primary">Kayıt Ol</a>
+										class="visible-xs btn btn-primary">Kayıt Ol</a>
+										
+										<a id="register" href="/kayitol"
+										class="hidden-xs btn btn-primary">Kayıt Ol</a>
 									</div>
 								</div>
 
@@ -258,12 +258,29 @@
 
 					</div>
 
-					<div style="padding-left:50px;margin-top: 20px;" class="col-lg-8 col-md-8">
+					<div style="padding-left:50px;margin-top: 20px;" class="hidden-xs hidden-sm col-lg-7 col-md-7">
+
+						-Kullanım Koşulları için <a href="/kullanimkosullari">buraya</a> tıklayınız.<br><br>
+						
+						-Sitemizin işleyişiyle ilgili bilgi mi almak istiyorsunuz? <a href="">Buraya</a> tıklayın.<br><br>
+						&nbsp;Ya da yardıma mı ihtiyacınız var? O zaman <a href="/yardim">buraya</a> tıklayın. <br />
+						<br>
+						
+						<img class="img-responsive" width="200px" src="/resources/images/login-icon.png" >
+
+					</div>
+					
+					
+					<div style="margin-top: 20px;" class="visible-xs visible-sm col-lg-7 col-md-7">
 
 						-Kullanım Koşulları için <a href="/kullanimkosullari">buraya</a> tıklayınız.<br><br>
 						
 						-Sitemizin işleyişiyle ilgili bilgi mi almak istiyorsunuz? <a href="">Buraya</a> tıklayın.<br><br>
 						&nbsp;Ya da yardıma mı ihtiyacınız var? O zaman <a href="/yardim">buraya</a> tıklayın.
+						
+						<br> <br>
+						
+						<img class="img-responsive" width="200px" src="/resources/images/login-icon.png" >
 
 					</div>
 
@@ -271,7 +288,11 @@
 
 			</div>
 
+			<div class="row">
+
 			<%= render "footer" %>
+			
+			</div>
 
 		</div>
 
