--- a/app/views/advert/ilan.html.erb
+++ b/app/views/advert/ilan.html.erb
@@ -397,10 +397,10 @@
 
 									</div>
 
-									<div class=" hidden-sm">
+									<div class=" visible-lg visible-md ">
 										<div class="star-on">
 
-											<div class = "row panel panel-info">
+											<div class = " panel panel-info">
 												<div class = "panel-heading">
 													<h4 style="text-align:center;">İlan ve Üye Bilgileri</h4>
 												</div>
@@ -436,11 +436,61 @@
 										</div>
 
 									</div>
+									
+									
+									
+									
+									
 
 								</div>
 							</div>
 							<div class="clearfix"></div>
 							<br>
+							
+							
+							
+							
+							<div class=" visible-xs  ">
+										<div class="star-on">
+
+											<div class = " panel panel-info">
+												<div class = "panel-heading">
+													<h4 style="text-align:center;">İlan ve Üye Bilgileri</h4>
+												</div>
+
+												<div class = "panel-body">
+
+													<% if current_user!= nil %>
+
+													<h4>Kullanıcı Güven Oyu</h4>
+													<br>
+
+													<input value="<%= @vote %>" type="number" class="rating input-21c" min=0 max=5 step=1 data-size="xs">
+
+													<% end %>
+
+													<div class="clearfix"></div>
+
+													<br>
+
+													<% if @advert.advertable_type == 'Secondhand' %>
+													<%= render "ilanikinciel" %>
+													<% elsif @advert.advertable_type == 'Homemate' %>
+													<%= render "ilanevarkadasi" %>
+													<% elsif @advert.advertable_type == 'Privatelesson' %>
+													<%= render "ilanozelders" %>
+													<% end %>
+
+													<h4  class="add-to item_price">İlan sahibinin telefonu: <span style="color:#4DACC9;" ><%= @advert_user.phone %></span></h4>
+													<br>
+													<h4> İlan sahibinin profili için <a href="/uye/<%= @advert_user.username %>">buraya</a> tıklayınız. </h4>
+												</div>
+											</div>
+										</div>
+
+									</div>
+							
+							
 
 							<div  class=" hidden-sm">
 
