--- a/app/views/user/member.html.erb
+++ b/app/views/user/member.html.erb
@@ -1296,6 +1296,10 @@
 		</script>
 
 		<!-- plugins -->
+		
+		<!-- responsive header -->
+
+		<%= render "headerfixedjs" %>
 
 		<!-- Tooltip eklentisi-->
 
