--- a/app/views/user_mailer/verify.html.erb
+++ b/app/views/user_mailer/verify.html.erb
@@ -21,7 +21,7 @@
 	<p> Şifreniz: <%= @user.password %></p>	 
 		
 		
-	<p> Lütfen kaydınızı onaylamak için aşağıdaki butona tıklayınız.</p> 
+	<p> Lütfen kaydınızı onaylamak için aşağıdaki linke tıklayınız.</p> 
 	
 	
 
