--- a/public/resources/css/searchbox.css
+++ b/public/resources/css/searchbox.css
@@ -4,12 +4,23 @@ input {
 }
 input[type=search] {
 	-webkit-appearance: textfield;
+	-moz-appearance: textfield;
+	-o-appearance: textfield;
+	-ms-appearance: textfield;
 	-webkit-box-sizing: content-box;
+	-moz-box-sizing: content-box;
+	-o-box-sizing: content-box;
+	-ms-box-sizing: content-box;
 	font-family: inherit;
 	font-size: 100%;
 }
 input::-webkit-search-decoration,
 input::-webkit-search-cancel-button {
+	display: none; 
+}
+
+input::-moz-search-decoration,
+input::-moz-search-cancel-button {
 	display: none; 
 }
 
