--- a/app/views/index/risksizalisveris.html.erb
+++ b/app/views/index/risksizalisveris.html.erb
@@ -142,15 +142,25 @@
 
 			<div class="row">
 
-				<div  class="well">
+				<div style="padding:30px;" class="well">
 					
 					<h2>Risksiz Alışveriş Sistemi </h2>
 					<br>
 
-					<p>Campus İlan sizden asla ve asla kredi kartı bilgilerinizi istemez. Tamamen özgürce ilan açabilir ve hizmet alabilirsiniz.</p> 
+					<p>-Campus İlan sizden asla ve asla kredi kartı bilgilerinizi istemez. Tamamen özgürce ilan açabilir ve hizmet alabilirsiniz.
 					
-					<p> Tek yapmanız gereken ilan açan kişinin kişisel bilgileri ile kendisine ulaşmak... Gerisi artık size kalmış.</p>
+					 Tek yapmanız gereken ilan açan kişinin kişisel bilgileri ile kendisine ulaşmak... Gerisi artık size kalmış.</p>
 					
+					<p> -Campus İlan elden ödeme sisteminin yanında kullanıcı bilgi gizliliğine önem verir ve gerektiğinde kullanıcının taleplerine yanıt verir.  </p>
+					
+					<p>-Eğer bir sorun yaşıyorsanız veya bizimle iletişim kurmak istiyorsanız <a href="/iletisim">buradan</a> bizimle iletişim kurabilirsiniz. </p>
+					
+					<br>
+					
+						<div style="text-align:center;" >
+					<img src="/resources/images/risksizalisveris.jpg"  width="500px;">
+					
+					</div>
 
 				</div>
 
