--- a/app/views/user/register.html.erb
+++ b/app/views/user/register.html.erb
@@ -503,6 +503,17 @@
 
 										
 									</div>
+									
+									<div class=" col-md-12 visible-md phonekarakter">
+
+										<div style="display: none;"
+										class="col-lg-12 col-md-12 form-group  phonekarakterhatasi label label-danger">
+											Hatalı veya eksik telefon numarası
+										</div>
+
+									</div>
+									
+									
 
 									<div class="form-group col-lg-4  ">
 										<label>
@@ -536,7 +547,7 @@
 
 									</div>
 
-									<div class="col-lg-6 col-md-6 hidden-xs hidden-sm phonekarakter">
+									<div class="col-lg-6 col-md-6 visible-lg phonekarakter">
 
 										<div style="display: none;"
 										class="col-lg-12 col-md-12 form-group  phonekarakterhatasi label label-danger">
